--- a/css file/style.css
+++ b/css file/style.css
@@ -47,7 +47,8 @@ font-family: 'Monoton', cursive;
     justify-content: space-between;
 }
 #nav_form{
-  padding:18px 13px ;
+  padding:18px 13px;
+ 
 }
 .title{
     font-family:'Monoton', cursive; 
@@ -57,9 +58,10 @@ font-family: 'Monoton', cursive;
     color: rgb(245, 182, 8);
 }
 .search_bx{
-    border: none;
+    border:none;
     padding: 5px 4px;
     border-radius: 9px;
+    /* margin: 0px 5px; */
 }
 
 #search_btn{
