--- a/css file/style.css
+++ b/css file/style.css
@@ -363,6 +363,21 @@ button:hover{
         display: none;
         
     }
+    .font{
+        font-family:'Baloo Bhaijaan 2', cursive;
+        opacity: 1;
+        text-align: center;
+        font-size: 25px;
+        font-weight: 500;
+     }
+
+
+     .d_flex{
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         flex-direction: column;
+     }
    
 
 
