--- a/css file/style.css
+++ b/css file/style.css
@@ -378,9 +378,12 @@ button:hover{
          justify-content: center;
          flex-direction: column;
      }
+
+     .center{
+         text-align: center;
+         color: rgb(255, 81, 0);
+     }
    
-
-
     
     
 
