--- a/css file/style.css
+++ b/css file/style.css
@@ -20,6 +20,7 @@ font-family: 'Monoton', cursive;
 .navbar{
  background: rgb(46, 40, 40);
  position: sticky;
+ transition: top .3s;
  
 }
 
@@ -39,6 +40,22 @@ font-family: 'Monoton', cursive;
     font-size:large;
     font-family: 'Baloo Bhaijaan 2', cursive;
    
+}
+
+.menu_bar{
+    display: none;
+    position: absolute;
+    top: 3%;
+    left: 95%;
+    cursor: pointer;
+    
+}
+.menu_logo{
+    background-color: black;
+    height: 2%;
+    margin: 3px 10px;
+    width: 100%;
+    padding: 1.5px;
 }
 
 
@@ -285,12 +302,10 @@ button:hover{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    margin: 5px;
+   
     }
 
-    .footItem{
-
-    }
+    
 
     .footList{
       list-style: none;
@@ -340,9 +355,7 @@ button:hover{
       
     }
 
-    .contact p{
-       
-    }
+    
 
     .logo{
      padding: 6px;
