--- a/css file/style.css
+++ b/css file/style.css
@@ -167,7 +167,7 @@ button:hover{
     transform: scaleY(1.08);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
-.container{
+.section{
     width: 200px;
     position: absolute;
     top: 20%;
@@ -370,7 +370,7 @@ button:hover{
 
     /***************************************************/
 
-    /**universal***/
+    /**universal***/  
     .none{
         display: none;
         
